[gd_scene load_steps=21 format=2]

[ext_resource path="res://Entities/Enemies/Bosses/LabsBoss/Boss.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/Bosses/LabsBoss/Arm.png" type="Texture" id=2]
[ext_resource path="res://Entities/Enemies/Bosses/LabsBoss/BossLabs.gd" type="Script" id=3]
[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=4]
[ext_resource path="res://Managing/Colliders/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/BossBar/Bossbar.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/DamageManager.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/WorldManagement/RoomGenerator.gd" type="Script" id=8]
[ext_resource path="res://Entities/Effects/EnemySpawnGrow.png" type="Texture" id=9]
[ext_resource path="res://Entities/Effects/Blood/Blood.tscn" type="PackedScene" id=11]
[ext_resource path="res://General/BossDropper.gd" type="Script" id=12]

[sub_resource type="Animation" id=1]
resource_name = "ChargeUp"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("ChargeVisual:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "charge_shot"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ChargeVisual:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 116.039

[sub_resource type="CapsuleShape2D" id=4]
height = 26.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 19, 10 )

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Gun:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=8]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=9]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11 ]
}

[node name="BossLabs" type="KinematicBody2D"]
z_index = 1
collision_layer = 0
collision_mask = 17
script = ExtResource( 3 )
maxSpeed = 60
accel = 20.0
fastFireCooldown = 0.1
fastFireShots = 15
shotgunBulletSpeed = 120
shotgunCooldown = 0.5
chargeDamage = 50

[node name="Gun" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -30 )
texture = ExtResource( 2 )
offset = Vector2( 12, 1 )

[node name="BarrelEnd" type="Position2D" parent="Gun"]
position = Vector2( 26, 0 )

[node name="ChargeVisual" type="Sprite" parent="Gun"]
position = Vector2( 30, 0 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gun"]
autoplay = "Reset"
anims/ChargeUp = SubResource( 1 )
anims/Reset = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 5
texture = ExtResource( 1 )
offset = Vector2( -2, -27 )
hframes = 11
vframes = 3
frame = 16

[node name="Collisions" type="Node2D" parent="."]
visible = false

[node name="PlayerDetection" parent="Collisions" instance=ExtResource( 4 )]
visible = false
position = Vector2( 2, -40 )

[node name="CollisionShape2D" parent="Collisions/PlayerDetection" index="0"]
shape = SubResource( 3 )

[node name="Hurtbox" parent="Collisions" instance=ExtResource( 5 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Collisions/Hurtbox" index="0"]
position = Vector2( 1, -23 )
shape = SubResource( 4 )

[node name="CollisionChecker" type="RayCast2D" parent="Collisions"]
position = Vector2( 0, -10 )
enabled = true
cast_to = Vector2( -50, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2, -11 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 6 )
anims/Shoot = SubResource( 7 )
anims/WalkBackwards = SubResource( 8 )
anims/WalkForwards = SubResource( 9 )

[node name="Timers" type="Node" parent="."]

[node name="FireChargeTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="FireCooldown" type="Timer" parent="Timers"]
one_shot = true

[node name="FireStateTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="WalkDirChange" type="Timer" parent="Timers"]
one_shot = true

[node name="BossBar" type="CanvasLayer" parent="."]
layer = 3

[node name="Bossbar" parent="BossBar" instance=ExtResource( 6 )]
bossName = "Horace"
dmgManagerPth = NodePath("../../DamageManager")

[node name="RoomGenerator" type="Node" parent="."]
script = ExtResource( 8 )

[node name="DamageManager" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -23 )
maxHealth = 12800
defense = 2
kbAmount = 0.0
difficulty = 2
isBoss = true
spritePath = NodePath("../Sprite")
deathParticles = ExtResource( 11 )

[node name="BossDropper" type="Node2D" parent="."]
script = ExtResource( 12 )
spritePath = NodePath("../Sprite")

[connection signal="hurt" from="Collisions/Hurtbox" to="DamageManager" method="take_damage"]

[editable path="Collisions/PlayerDetection"]
[editable path="Collisions/Hurtbox"]
